2005-04-29  David Bateman  <dbateman@free.fr>

	* interpreter/sparse.txi: Add matrix_type, spkron, and document
	changes in solve code.

2005-03-14  David Bateman  <dbateman@free.fr>

	* interpreter/sparse.txi: Add luinc function.

2005-03-09  John W. Eaton  <jwe@octave.org>

	* Makefile.in (bin-dist): Delete target.
	(BINDISTSUBDIRS): Delete variable.

	* refcard/Makefile.in (bin-dist): Delete target.
	(BINDISTFILES): Delete variable.
	* liboctave/Makefile.in: Likewise.
	* interpreter/Makefile.in: Likewise.
	* faq/Makefile.in: Likewise.

2005-02-25  John W. Eaton  <jwe@octave.org>

	Sparse merge.

	2005-01-07  David Bateman  <dbateman@free.fr>

	* interpreter/sparse.txi: New file.
	* interpreter/Makefile.in: Add it to the build.
	* interpreter/octave.texi: Include it in the contents tables and the
	top level document.

2005-02-25  John W. Eaton  <jwe@octave.org>

	* liboctave/Makefile.in (all): Also depend on Octave-FAQ.pdf.
	Use $(MAKEINFO) instead of makeinfo in rules.

2005-02-25  Rafael Laboissiere  <rafael@debian.org>

	* liboctave/Makefile.in (Octave-FAQ.pdf): New target and rule.
	(FORMATTED): Add Octave-FAQ.pdf to the list.

2005-02-21  John W. Eaton  <jwe@octave.org>

	* liboctave/Makefile.in (liboctave.pdf): New target and rule.
	(FORMATTED): Add liboctave.pdf to the list.
	(all): Also depend on liboctave.pdf.
	Use $(MAKEINFO) instead of makeinfo in rules.

	* interpreter/Makefile.in (octave.pdf): New target and rule.
	(FORMATTED): Add octave.pdf to the list.
	(all): Also depend on octave.pdf.
	Use $(MAKEINFO) instead of makeinfo in rules.

2005-02-08  Quentin Spencer  <qspencer@ieee.org>

	* interpreter/plot.txi: Emphasize compatible plotting functions
	over gplot and friends.

2004-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* liboctave/Makefile.in (FORMATTED): Use liboctave*.html instead
	of liboctave_*.html.

	* faq/Makefile.in (FORMATTED): Use Octave-FAQ*.html instead of
	Octave-FAQ_*.html.

2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
