@@ -1,3 +1,8 @@
+2005-05-02  John W. Eaton  <jwe@octave.org>
+
+	* interpreter/munge-texi.cc (skip_comments): New function.
+	(process_doc_file): Use it to skip comments at beginning of file.
+
 2005-04-29  David Bateman  <dbateman@free.fr>
 
 	* interpreter/sparse.txi: Add matrix_type, spkron, and document
